--- a/docs/references.bib
+++ b/docs/references.bib
@@ -30,7 +30,7 @@ year = {2023},
 issn = {0306-4549},
 doi = {https://doi.org/10.1016/j.anucene.2023.109864},
 url = {https://www.sciencedirect.com/science/article/pii/S0306454923001834},
-author = {\underline{\textbf{Stefano Riva}} and Carolina Introini and Stefano Lorenzi and Antonio Cammi},
+author = {Stefano Riva and Carolina Introini and Stefano Lorenzi and Antonio Cammi},
 keywords = {GEIM, PBDW, Model order reduction, Data assimilation, Thermal hydraulics},
 }
 
