--- a/docs/references.bib
+++ b/docs/references.bib
@@ -273,3 +273,16 @@ school = {Politecnico di Milano},
 title = {{Advanced modelling and stability analysis for nuclear reactors}},
 year = {2021}
 }
+
+@article{HAIK2023115868,
+title = {A real-time variational data assimilation method with data-driven model enrichment for time-dependent problems},
+journal = {Computer Methods in Applied Mechanics and Engineering},
+volume = {405},
+pages = {115868},
+year = {2023},
+issn = {0045-7825},
+doi = {https://doi.org/10.1016/j.cma.2022.115868},
+url = {https://www.sciencedirect.com/science/article/pii/S0045782522008246},
+author = {Willy Haik and Yvon Maday and Ludovic Chamoin},
+keywords = {Variational data assimilation, Parameterized partial differential equations, Model order reduction, Hybrid modeling},
+}
