--- a/docs/references.bib
+++ b/docs/references.bib
@@ -191,6 +191,14 @@ url = {https://doi.org/10.1515/9783110671490},
 year = {2020}
 }
 
+@phdthesis{Taddei_phdThesis,
+author = {Taddei, Tommaso},
+doi = {10.13140/RG.2.2.16001.45928},
+school = {Massachusetts Institute of Technology},
+title = {{Model order reduction methods for data assimilation; state estimation and structural health monitoring}},
+year = {2016}
+}
+
 @book{DataDrivenScience_book,
 address = {USA},
 author = {Brunton, Steven L and Kutz, J Nathan},
@@ -285,4 +293,23 @@ doi = {https://doi.org/10.1016/j.cma.2022.115868},
 url = {https://www.sciencedirect.com/science/article/pii/S0045782522008246},
 author = {Willy Haik and Yvon Maday and Ludovic Chamoin},
 keywords = {Variational data assimilation, Parameterized partial differential equations, Model order reduction, Hybrid modeling},
+}
+
+@InProceedings{GEIM_noise,
+doi = {10.48550/arXiv.1611.02219},
+author="Argaud, J. P.
+and Bouriquet, B.
+and Gong, H.
+and Maday, Y.
+and Mula, O.",
+editor="Bittencourt, Marco L.
+and Dumont, Ney A. 
+and Hesthaven, Jan S.",
+title={{Stabilization of (G)EIM in Presence of Measurement Noise: Application to Nuclear Reactor Physics}},
+booktitle="Spectral and High Order Methods for Partial Differential Equations  ICOSAHOM 2016",
+year="2017",
+publisher="Springer International Publishing",
+address="Cham",
+pages="133--145",
+isbn="978-3-319-65870-4"
 }
